<resources>
    <string name="app_name">SalonProject</string>

    <!--    LoginActivity-->
    <string name="email_text_view">Email</string>
    <string name="email_edit_text"></string>
    <string name="pwd_text_view">Password</string>
    <string name="pwd_edit_text"></string>
    <string name="forgot_pwd_text_view">I forgot my password</string>
    <string name="signin_button">Sign in</string>
    <string name="signup_text_view">Sign up</string>

    <!--    RegisterUserActivity-->
    <string name="userfname_edit_text">Enter your First Name</string>
    <string name="userlname_edit_text">Enter your Last Name</string>
    <string name="userphone_edit_text">Phone No</string>
    <string name="useremail_edit_text">Email</string>
    <string name="user_pwd_edit_text">Password</string>
    <string name="signup_button">Register</string>

    <!--    Fragment Salon -->
    <string name="facial_image_button">Facial</string>
    <string name="threading_image_button">Threading</string>
    <string name="waxing_image_button">Waxing</string>
    <string name="haircut_image_button">Haircut</string>
    <string name="appointment_book_button">Book Appointment</string>

    <!--    Facial Fragment-->
    <string-array name="spinner_array_facial_services">
        <item>Facial Services</item>
        <item>Gold Facial</item>
        <item>Fruit Facial</item>
        <item>Herbal Facial</item>
        <item>Face Bleach</item>
    </string-array>

    <string name="start_service_button">Start Video</string>
    <string name="stop_service_button">Stop Video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Threading Fragment-->
    <string-array name="spinner_array_threading_services">
        <item>Threading Services</item>
        <item>Eyebrows</item>
        <item>Eyebrows Tinting</item>
        <item>Upper Lip</item>
        <item>Chin</item>
        <item>Full Face</item>
    </string-array>

    <!--    Waxing Fragment-->
    <string-array name="spinner_array_waxing_services">
        <item>Waxing Services</item>
        <item>Under Arms</item>
        <item>Half Arms</item>
        <item>Full Arms</item>
        <item>Half Legs</item>
        <item>Full Legs</item>
        <item>Full Face</item>
        <item>Full Bikini</item>
        <item>Bikini Line</item>
    </string-array>

    <!--    Appointment Booking Fragment-->
    <string name="select_date_button">Select Date</string>
    <string name="select_time_button">Select Time</string>
    <string name="services">Facial\nThreading\n</string>
    <string-array name="spinner_array_services">
        <item>Services</item>
        <item>Facial</item>
        <item>Threading</item>
        <item>Waxing</item>
        <item>Haircut</item>
    </string-array>

</resources>
