<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/salonToolbar"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:background="@color/my_primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textView7"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:textSize="26dp"
        android:layout_marginStart="28dp"
        android:text="Hello, "
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salonToolbar"
        app:layout_constraintVertical_bias="0.806" />

    <TextView
        android:id="@+id/userName_textView"
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:text="Welcome to Beauty Salon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName_textView"
        app:layout_constraintVertical_bias="0.011" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.089"
        >

        <ImageButton
            android:id="@+id/facial_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/facial_image_button"
            app:srcCompat="@drawable/facial_icon"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="205dp" />

        <ImageButton
            android:id="@+id/threading_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/threading_image_button"
            android:layout_marginStart="22dp"
            app:srcCompat="@drawable/eyebrow_icon"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="205dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">


        <ImageButton
            android:id="@+id/waxing_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/waxing_image_button"
            app:srcCompat="@drawable/waxing_icon"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="205dp" />

        <ImageButton
            android:id="@+id/haircut_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:contentDescription="@string/haircut_image_button"
            app:srcCompat="@drawable/haircut_icon"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="205dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/appointment_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/my_primary"
        android:text="@string/appointment_book_button"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />



</androidx.constraintlayout.widget.ConstraintLayout>