<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/salonbg1"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF820B97"
        android:alpha="0.8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="22dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Beauty Salon"
            android:textStyle="italic|bold"
            android:fontFamily="sans-serif"
            android:textSize="42dp"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="40dp"
        android:layout_marginBottom="-40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="46dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textColor="@color/my_primary"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="Please login with your information" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text_view"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/pwd_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_text_view"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pwd_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/redeye_icon"
                android:inputType="textPassword" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/forgot_pwd_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    android:text="@string/forgot_pwd_text_view" />

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="22dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appointment_book_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_pwd_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:backgroundTint="@color/my_primary"
                android:text="Sign in"
                android:textSize="25dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="22dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="First time user?" />

                <TextView
                    android:id="@+id/signup_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:drawableRight="@drawable/signup_arrow_icon"
                    android:text="@string/signup_text_view"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>